--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ The game also uses music and a couple of sound effects.
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Fruit Catcher</title>
+        <title>Fruit Catcher - Skdev Online</title>
         <meta charset="UTF-8">
     </head>
     <style type="text/css">
